Minor changes to run on Java 8